making-responsive-website

--- a/src/index.css
+++ b/src/index.css
@@ -3,17 +3,17 @@
 @tailwind utilities;
 
 .btn{
-    @apply h-full px-12 py-4 text-base font-medium cursor-pointer;
+    @apply h-full px-10 py-3 lg:px-12 lg:py-4 text-sm lg:text-base font-medium cursor-pointer;
 }
 
 .btn-primary{
-    @apply bg-primary-color hover:bg-secondary-color text-white ease-out duration-200;
+    @apply bg-primary-color hover:bg-secondary-color text-white ease-out duration-300;
 }
 
 .btn-secondary{
-    @apply bg-white hover:bg-secondary-color text-black hover:text-white ease-out duration-200;
+    @apply bg-white hover:bg-secondary-color text-primary-color hover:text-white ease-out duration-300;
 }
 
 .btn-hero{
-    @apply h-full text-base font-medium px-12 py-6 cursor-pointer bg-secondary-color hover:bg-hero-hover text-white ease-out duration-200;
+    @apply h-full text-sm lg:text-base font-medium px-8 py-4 lg:px-12 lg:py-6 cursor-pointer bg-secondary-color hover:bg-hero-hover text-white ease-out duration-300;
 }
